tests/front_end/input/type_errors/int_bool_conversion.wl
//E<5:30>: Cannot apply `+` to int and boolean
int main() {
    int  i =   0;
    bool b = true;
    /* ??? */ int result = i + b;
    return 0;
}
